--- a/College-portal-System/appsettings.json
+++ b/College-portal-System/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "default": "Server=tcp:portal-system.database.windows.net,1433;Initial Catalog=portal;User Id=portal-admin;Password=Depi@047;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -7,3 +10,7 @@
   },
   "AllowedHosts": "*"
 }
+/*
+
+  Server=tcp:portal-system.database.windows.net,1433;Initial Catalog=portal;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;Authentication='Active Directory Default';
+*/
