--- a/College-portal-System/College-portal-System.csproj
+++ b/College-portal-System/College-portal-System.csproj
@@ -15,6 +15,9 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.6" />
+	<ProjectReference Include="..\DataAccessLayer\DataAccessLayer.csproj"></ProjectReference>
+	<ProjectReference Include="..\BusinessLogicLayer\BusinessLogicLayer.csproj"></ProjectReference>
+
   </ItemGroup>
 
   <ItemGroup>
