--- a/College-portal-System/appsettings.json
+++ b/College-portal-System/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "default": "Server=tcp:portal-system.database.windows.net,1433;Initial Catalog=portal;User Id=portal-admin;Password=Depi@047;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "default": "Server=tcp:portal-system.database.windows.net,1433;Initial Catalog=portal;User Id=portal-admin;Password=Depi@047;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
+    "AppDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=College-portal-System;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
@@ -10,7 +11,3 @@
   },
   "AllowedHosts": "*"
 }
-/*
-
-  Server=tcp:portal-system.database.windows.net,1433;Initial Catalog=portal;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;Authentication='Active Directory Default';
-*/
