--- a/College-portal-System/appsettings.json
+++ b/College-portal-System/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "default": "Server=tcp:portal-system.database.windows.net,1433;Initial Catalog=portal;User Id=portal-admin;Password=Depi@047;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
+    "default": "Server=tcp:portal-system.database.windows.net,1433;Initial Catalog=portal;User Id=portal-admin;Password=Depi@047;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;MultipleActiveResultSets=true",
     "AppDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=College-portal-System;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
