--- a/College-portal-System/College-portal-System.csproj
+++ b/College-portal-System/College-portal-System.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -39,12 +39,8 @@
     <Folder Include="wwwroot\lib\jquery\dist\" />
   </ItemGroup>
 
-  <ItemGroup>
-<<<<<<< HEAD
-    <ProjectReference Include="..\BusinessLogicLayer\BusinessLogicLayer.csproj" />
-=======
->>>>>>> d6417c3a3b5580ef2f739281e31af2b3ad626827
-    <ProjectReference Include="..\DataAccessLayer\DataAccessLayer.csproj" />
-  </ItemGroup>
+	<PropertyGroup>
+		<HotReloadEnabled>false</HotReloadEnabled>
+	</PropertyGroup>
 
 </Project>
